--- a/style/style.css
+++ b/style/style.css
@@ -222,10 +222,12 @@ body {
 }
 
 .navigation-site {
+  max-width: 450px;
   margin-right: auto;
 }
 
 .navigation-user {
+  max-width: 570px;
   display: flex;
   flex-wrap: wrap;
   justify-content: end;
@@ -278,15 +280,20 @@ body {
 }
 
 .navigation__link--catalog .navigation__link-icon {
-  transform: translateY(-2px);
+  transform: translate(2px, -2px);
 }
 
 .navigation__link-text {
-  margin-right: 8px;
+  width: 100%;
 }
 
 .navigation__link-icon {
+  width: 23px;
   fill: #2d3440;
+}
+
+.navigation__link-icon--search {
+  width: 16px;
 }
 
 .navigation-user__link {
@@ -303,7 +310,7 @@ body {
   border-radius: 50%;
 }
 
-.navigation__link--hidden-text {
+.navigation__text--hidden {
   display: none;
 }
 
@@ -313,11 +320,6 @@ body {
 
 .navigation-user__link--cart {
   font-size: 14px;
-}
-
-.navigation-user__link--login .navigation__link-icon,
-.navigation-user__link--cart .navigation__link-icon {
-  margin-right: 6px;
 }
 
 .main {
@@ -953,6 +955,7 @@ body {
 }
 
 .form__input::placeholder {
+  font-family: "Inter", sans-serif;
   color: #b9b9b9;
   font-size: 16px;
   font-weight: 400;
@@ -1761,7 +1764,7 @@ body {
   z-index: 2;
 }
 
-.popup--login-form {
+.popup__form {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 23px;
@@ -1786,7 +1789,8 @@ body {
   grid-column: 1 / span 3;
 }
 
-.popup--login-button {
+.popup__form-button {
+  max-width: 132px;
   padding: 12px 32px;
   grid-row: 3 / span 2;
   grid-column: 1 / 2;
@@ -1794,7 +1798,8 @@ body {
 
 .popup__link {
   position: relative;
-  width: max-content;
+  width: fit-content;
+  align-self: start;
   color: #2d3440;
   text-decoration: none;
   font-size: 14px;
@@ -1805,7 +1810,7 @@ body {
 .popup__link::after {
   position: absolute;
   right: 0;
-  bottom: 10px;
+  bottom: 0;
   left: 0;
   height: 1px;
   background-color: #2d3440;
@@ -1921,7 +1926,7 @@ body {
 .cart__summary-container {
   display: flex;
   align-items: center;
-  gap: 33px;
+  gap: 30px;
 }
 
 .cart__total-value-container {
@@ -1999,4 +2004,68 @@ body {
 .dropdown-menu__link--current:active {
   background-color: #ff4a78;
   color: #fcfcfc;
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(45, 52, 64, 0.3);
+  z-index: 1;
+}
+
+.modal--closed {
+  display: none;
+}
+
+.modal__content {
+  box-sizing: border-box;
+  position: relative;
+  width: 570px;
+  margin: auto;
+  padding: 64px;
+  padding-bottom: 40px;
+  border-radius: 8px;
+  background: #fcfcfc;
+  color: #2d3440;
+  box-shadow: 0 15px 40px 0 rgba(45, 52, 64, 0.12);
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 32px;
+  right: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+}
+
+.modal__close-button:hover {
+  cursor: pointer;
+}
+
+.modal__title {
+  margin: 0;
+  margin-bottom: 32px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 16px;
+}
+
+.modal__input {
+  width: 100%;
+}
+
+.modal__button {
+  margin-top: 13px;
 }
